# hardhat

./: Makefile.am  TODO  configure.ac  libhardhat.ver  makedist
debian/: README.Debian  changelog  control  copyright  libhardhat-dev.install  rules
m4/: gcc-builtin.m4
src/: hardhat.c  hashtable.c  hashtable.h  layout.h  maker.c  maker.h  mkhardhat.c  murmur3.c  murmur3.h  qsort_r.c  reader.c  reader.h  readerimpl.h
tests/: hardhat.c  log-driver  tap.h  testdata  wrapper
